# Differentaible-Logic-CellularAutomata

./: .gitignore  CMakeLists.txt  README.md  circuit_config.json  game_of_life_config.json  game_of_life_simple.json  learned_game_of_life_config.json
include/: Cell.h  DiffLogicCA.h  Grid.h  LogicCircuit.h  LogicGate.h  ModelLoader.h
src/: DiffLogicCA.cpp  ModelLoader.cpp  main.cpp
training/: README.md  diff_logic_ca.py  diff_logic_gates.py  game_of_life_data.py  requirements.txt  train_game_of_life.py
